# knowledge_nexus

./: .env.docker.example  .env.example  .env.local.example  .gitignore  AGENTS.md  README.md  findings.md  progress.md  pyproject.toml  start.sh  stop.sh  task_plan.md  test_pipeline.py
.pi/skills/: cloudreve-io  knowledge-os
apps/api/: Dockerfile  factory.py  main.py
apps/mcp/: server.py
apps/web/: .env.local  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
apps/worker/: main.py
core/: mcp_server.py  models.py  settings.py  worker.py
core/agents/: __init__.py  _model.py  classifier_agent.py  graph_completion_agent.py  graph_qa_agent.py  schema_agent.py
core/cloudreve/: __init__.py  client.py  oauth.py  uri.py
core/db/: schema.sql
core/graph/: __init__.py  neo4j_store.py
core/repositories/: __init__.py  base.py  memory.py  postgres.py
core/services/: _llm_utils.py  document_classifier.py  file_gate.py  hyper_extract_bridge.py  kgraph_context.py  knowledge_extractor.py  pipeline.py  scanner.py  semantic_matcher.py  (+1 more)
docs/: architecture-status.html  architecture_design.md  cloudreve_worker_auth.md  core_architecture.md  local-development.md  mcp_setup.md  progress.md  project_structure.md  semantic_pipeline.md  storage-adapter-integration.md
downloads/: SHIFDR_data_analysis_report.md
knowledge-graph/: SKILL.md  说明.txt
knowledge_os/: __init__.py  models.py  postgres_store.py  services.py  store.py
nexus/: __init__.py  api.py  app_factory.py  mcp_server.py  settings.py  worker.py
scripts/: init_postgres.py  probe_cr.py
(+144 files in other folders)
